--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "quadify",
   "version": "1.0.0",
-  "description": "Python-powered Volumio plugin: Quadify integration",
+  "description": "A Volumio plugin that integrates a Python-based Quadify backend.",
+  "keywords": ["volumio", "plugin", "quadify", "python", "music_service"],
   "main": "index.js",
   "scripts": {
     "test": "echo \"No test specified\" && exit 0"
   },
-  "author": "Matt Shepherd"
+  "author": "Matt Shepherd",
   "license": "MIT",
   "repository": "https://github.com/theshepherdmatt/Quadify-Plugin",
+  "bugs": {
+    "url": "https://github.com/theshepherdmatt/Quadify-Plugin/issues"
+  },
   "volumio_info": {
     "prettyName": "Quadify Plugin",
     "icon": "fa-microchip",
