--- a/quadify/service/early_led8.service
+++ b/quadify/service/early_led8.service
@@ -6,7 +6,8 @@ Before=quadify.service
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/python3 /home/volumio/Quadify/scripts/early_led8.py
+User=volumio
+ExecStart=/usr/bin/python3 /data/plugins/music_service/quadifyplugin/quadify/scripts/early_led8.py
 RemainAfterExit=yes
 
 [Install]
