--- a/quadify/service/cava.service
+++ b/quadify/service/cava.service
@@ -1,9 +1,11 @@
 [Unit]
-Description=CAVA - Console-based Audio Visualizer
+Description=CAVA – Console-based Audio Visualizer
 After=sound.target
 
 [Service]
-ExecStart=/usr/local/bin/cava -p /home/volumio/cava/config/default_config
+Type=simple
+WorkingDirectory=/data/plugins/music_service/quadifyplugin/cava
+ExecStart=/usr/local/bin/cava -p /data/plugins/music_service/quadifyplugin/cava/config/default_config
 Restart=always
 RestartSec=3
 User=volumio
